<resources>
    <string name="app_name">MyNet</string>
    <string name="sign_in">sign</string>
    <string name="sign_up">register</string>
    <string name="sign_out">unsign</string>
    <string name="signIn">signIn</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="enter_login">enterLogin</string>
    <string name="enter_name">enterName</string>
    <string name="repeat_password">passRepeate</string>
    <string name="signUp">signUp</string>
    <string name="name">name</string>
    <string name="authError">authError</string>
    <string name="wrong_pass">wrong_pass</string>
    <string name="description_post_menu">Post menu</string>
    <string name="chooser_share_post">chooser_share_post</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="retry_loading">Retry</string>
    <string name="error_loading">Error loading data</string>
    <string name="description_post_save">Save</string>
    <string name="input_text">input text</string>
    <string name="remove">Remove</string>
    <string name="description_photo">Photo</string>
    <string name="add_post">add post</string>
    <string name="description_select_photo">select photo</string>
    <string name="description_take_photo">take photo</string>
    <string name="menu_save">save</string>
    <string name="description_select_link">link</string>
    <string name="description_take_voice">take voice</string>
    <string name="post_author_avatar">Post author avatar</string>
    <string name="postimage">postImage</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="pwsHide">********</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>