<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signUp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="@+id/tvLogin1"
        app:layout_constraintTop_toTopOf="@+id/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="60dp"
        android:layout_height="@dimen/login_height"
        android:layout_marginTop="10dp"
        android:background="#BAB6B6"
        android:hint="@string/enter_name"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/login"
        app:layout_constraintEnd_toEndOf="@+id/tvPass1"
        app:layout_constraintTop_toTopOf="@+id/login" />

    <EditText
        android:id="@+id/login"
        android:layout_width="@dimen/login_width"
        android:layout_height="@dimen/login_height"
        android:layout_marginTop="10dp"
        android:background="#BAB6B6"
        android:hint="@string/enter_login"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/tvPass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="@id/pass"
        app:layout_constraintEnd_toEndOf="@id/tvPassCopy"
        app:layout_constraintTop_toTopOf="@id/pass" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="@dimen/login_width"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:background="#BAB6B6"
        android:hint="********"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/tvPassCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password"
        app:layout_constraintBottom_toBottomOf="@+id/passCopy"
        app:layout_constraintEnd_toStartOf="@+id/passCopy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passCopy" />

    <EditText
        android:id="@+id/passCopy"
        android:layout_width="@dimen/login_width"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:background="#BAB6B6"
        android:hint="********"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passCopy" />

</androidx.constraintlayout.widget.ConstraintLayout>